<resources>
    <string name="app_name">PeluchitosApplication</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invetario">Inventario</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar</string>
    <string name="Agregar">Agregar</string>
    <string name="peluchito">Peluchito</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
