<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mAgregar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Agregar" />
        <item
            android:id="@+id/mBuscar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/buscar" />
        <item
            android:id="@+id/mEliminar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/eliminar" />
        <item
            android:id="@+id/mInventario"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/invetario" />
    </group>



</menu>
